# Hello_Docker

./: Dockerfile  README.md  docker-compose.yml  main_st.py
API/: Dockerfile  pyproject.toml  some_api.py
