[tool.poetry]
name = "docker-test"
version = "0.1.0"
description = "create simple containers for streamlit app and fastapi"
authors = ["fahmyadan <fahmy.adan14@imperial.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.31.0"
numpy = "^1.26.4"
pandas = "^2.2.0"
fastapi = "^0.109.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
